<resources>
    <string name="systemDefault">Systemstandard</string>
    <string name="lightMode">Tageslichtmodus</string>
    <string name="darkmode">Dunkelmodus</string>
    <string name="inAppUpdateCanceledByUser">Update vom Benutzer abgebrochen</string>
    <string name="inAppUpdateDownloaded">Ein Update wurde gerade heruntergeladen</string>
    <string name="inAppUpdateRestart">Neustarten</string>
    <string name="inAppReviewCouldntStart" translatable="false">Die Rezension konnte nicht gestartet werden</string>
    <string name="inAppReviewFinished" translatable="false">Bewertung abgeschlossen</string>
    <string name="defaultCalculationMode">Standard</string>
    <string name="easyCalculationMode">Vereinfacht</string>
    <string name="advancedHistoryMode">Erweitert</string>
    <string name="degree">Gradmaß (Deg)</string>
    <string name="radian">Bogenmaß (Rad)</string>
    <string name="app_name" translatable="false">RechenMax</string>
    <string name="calculate_label" translatable="false" />
    <string name="result_label" translatable="false">0</string>
    <string name="EmptyClipboardButton" translatable="false">MC</string>
    <string name="PasteFromClipboardButton" translatable="false">MR</string>
    <string name="CopyToClipBoardButton" translatable="false">MS</string>
    <string name="DivideButton" translatable="false">÷</string>
    <string name="MultiplyButton" translatable="false">×</string>
    <string name="SubtractButton" translatable="false">-</string>
    <string name="AddButton" translatable="false">+</string>
    <string name="NegativButton" translatable="false">±</string>
    <string name="commaButton">,</string>
    <string name="CalculateButton" translatable="false">=</string>
    <string name="BackspaceButton" translatable="false">⌫</string>
    <string name="ClearAllButton" translatable="false">C</string>
    <string name="ClearResultLabel" translatable="false">CE</string>
    <string name="OneButton" translatable="false">1</string>
    <string name="TwoButton" translatable="false">2</string>
    <string name="ThreeButton" translatable="false">3</string>
    <string name="FourButton" translatable="false">4</string>
    <string name="FiveButton" translatable="false">5</string>
    <string name="SixButton" translatable="false">6</string>
    <string name="SevenButton" translatable="false">7</string>
    <string name="EightButton" translatable="false">8</string>
    <string name="NineButton" translatable="false">9</string>
    <string name="ZeroButton" translatable="false">0</string>
    <string name="history_text" translatable="false" />
    <string name="clipOn" translatable="false">(</string>
    <string name="clipOff" translatable="false">)</string>
    <string name="power" translatable="false">x^</string>
    <string name="root" translatable="false">√x</string>
    <string name="sin" translatable="false">sin(x)</string>
    <string name="cos" translatable="false">cos(x)</string>
    <string name="tan" translatable="false">tan(x)</string>
    <string name="sinh" translatable="false">sinh(x)</string>
    <string name="cosh" translatable="false">cosh(x)</string>
    <string name="tanh" translatable="false">tanh(x)</string>
    <string name="asin" translatable="false">sin⁻¹(x)</string>
    <string name="acos" translatable="false">cos⁻¹(x)</string>
    <string name="atan" translatable="false">tan⁻¹(x)</string>
    <string name="asinh" translatable="false">sinh⁻¹(x)</string>
    <string name="acosh" translatable="false">cosh⁻¹(x)</string>
    <string name="atanh" translatable="false">tanh⁻¹(x)</string>
    <string name="log" translatable="false">log(x)</string>
    <string name="log2x" translatable="false">log₂(x)</string>
    <string name="logxx" translatable="false">logₓ(x)</string>
    <string name="ln" translatable="false">ln(x)</string>
    <string name="е" translatable="false">е</string>
    <string name="e" translatable="false">e±</string>
    <string name="pi" translatable="false">π</string>
    <string name="three_root" translatable="false">³√x</string>
    <string name="half" translatable="false">½</string>
    <string name="third" translatable="false">⅓</string>
    <string name="quarter" translatable="false">¼</string>
    <string name="appVersion" translatable="false">RechenMax 1.6.7</string>
    <string name="releaseDate">Veröffentlichungsdatum: 18.05.2024 – 18Uhr</string>
    <string name="releaseNotesText">"
        Neue Funktionen: \n
            - Wenn 10 Berechungen durchgeführt wurden und die Benachrichtigungen nicht aktiviert sind wird gefragt ob welche gesendet werden dürfen (ab Android 13 oder höher) \n

        \nÄnderungen: \n
            - Die Schaltflächen wurden im Layout zentriert \n
            - Die Textgröße der Schaltflächen im Layout wurde angepasst \n
            - Die Scrollleisten im Berechnungsbereich und im Ergebnisbereich wurden versteckt \n
            - Die Anzahl der Zeichen im Ergebnisbereich passt sich dynamisch der Bildschirmbreite an, anstatt auf einen festen Wert beschränkt zu sein \n

        \nBehobene Fehler: \n
            - Die App hat keine Benachrichtigungen gesendet (Absturz) \n
            - Leere Berechnungen wurden zu dem Verlauf hinzugefügt \n

        \nSystemanforderungen: \n
            - Minimale Android-Version: 10 \n
            - Empfohlene Android-Version: 13 oder höher \n
            - Maximale Android-Version: 14 \n
    "</string>
    <string name="wantToActivateNotifications">Möchtest du Benachrichtigungen erhalten? (Diese kannst du später auch in den Einstellungen wieder deaktivieren)</string>
    <string name="yesActivateNotifications">Ja</string>
    <string name="dontActivateNotifications">Später</string>
    <string name="historySuccesfullMessageLoad">Berechnung wurde erfolgreich geladen</string>
    <string name="historyErrorMessageLoad">Es ist ein Fehler beim Laden aufgetreten, versuche es später erneut</string>
    <string name="overview">Übersicht</string>
    <string name="newFunctions">Neue Funktionen</string>
    <string name="fixedBugs">Behobene Fehler</string>
    <string name="systemRequirement">Systemanforderungen</string>
    <string name="dontShowThisTextAgain">Diesen Text nicht mehr anzeigen</string>
    <string name="understood">Verstanden</string>
    <string name="functionText">Einstellung ‘Grad- / Bogenmaß’ ermöglicht die Auswahl zwischen zwei gängigen Maßeinheiten für Winkel: Grad und Bogenmaß. Ein Grad teilt den Winkel in 360 Teile, die einen vollen Kreis bilden. Im Bogenmaß wird der Winkel basierend auf dem Radius eines Kreises gemessen. Ein voller Kreis entspricht 2π Radian, wobei π etwa 3.14159 ist. Ein rechter Winkel beträgt π/2 Radian. Das Bogenmaß ermöglicht präzise Verhältnisse zwischen Winkel und Kreisradius und wird in fortgeschrittenen mathematischen Berechnungen verwendet.</string>
    <string name="patchnotesOverviewText">"Die neueste RechenMax-Version bringt aufregende Verbesserungen und Funktionen mit sich. Automatisches Scrollen erleichtert die Navigation bei umfangreichen Berechnungen, während die Rundungsgenauigkeit für präzisere Dezimalzahlen auf die elfte Nachkommastelle erhöht wurde. Der Verlauf wurde optimiert, um vorherige Berechnungen mühelos wiederherzustellen und vergangene Aufgaben zu überprüfen. In trigonometrischen Aufgaben stehen erweiterte Funktionen für Sinus, Cosinus und Tangens im Grad- und Bogenmaß zur Verfügung. Inverse trigonometrische Funktionen (sin⁻¹, cos⁻¹, tan⁻¹) sowie hyperbolische Funktionen wie sinh(x), cosh(x) und tanh(x) sind nun ebenfalls verfügbar. Die manuelle Eingabe von Notationen bietet zusätzliche Flexibilität bei der Erstellung und Berechnung komplexer Ausdrücke. Der RechenMax unterstützt jetzt die Verwendung der mathematischen Konstanten PI (π) für präzise Kreisberechnungen. Mit der flexiblen Unterstützung von Gradmaß und Bogenmaß kann je nach Bedarf zwischen den beiden Maßeinheiten gewechselt werden. Die Klammernbehandlung wurde optimiert, um die fehlerfreie Verarbeitung von mathematischen oder logischen Ausdrücken sicherzustellen. Die Software erkennt automatisch fehlende schließende Klammern und fügt sie hinzu, was die Eingabe von Ausdrücken weiter vereinfacht. Im Verlauf ermöglicht langes Drücken auf einen Eintrag das automatische Kopieren der Rechnung in die Zwischenablage, während kurzes Drücken die Rechnung direkt in den Taschenrechner einfügt. Diese Version behebt zudem wichtige Fehler, darunter Anzeige- und Faktoriellenberechnungsprobleme, sowie optimierte Ergebnisformatierung für eine präzisere Anzeige. "</string>
    <string name="shiftMode" translatable="false">1</string>
    <string name="deg" translatable="false">Deg</string>
    <string name="x" translatable="false">x!</string>
    <string name="introductionText">"Brauchst du Hilfe oder bist du neu hier? Diese umfassende Anleitung führt dich detailliert durch sämtliche Knöpfe und Funktionen des RechenMax. Der RechenMax bietet eine Vielzahl von leistungsstarken Werkzeugen und Möglichkeiten, um deine Rechenanforderungen effizient zu bewältigen. "</string>
    <string name="introduction">Einführung</string>
    <string name="basics">Grundlagen</string>
    <string name="calculationAreas">"Berechnungsbereiche"</string>
    <string name="calculationArea">"1: In diesem Bereich (Berechnungsbereich) wird die von dir eingegebene Berechnung angezeigt. Zudem kannst du, indem du den Bereich lange drückst, den Inhalt dessen Bereichs kopieren. 2: In diesem Bereich (Ergebnisbereich) wird das Ergebnis der durchgeführten Berechnung angezeigt. Zudem kannst du, indem du den Bereich lange drückst, den Inhalt dessen Bereichs kopieren."</string>
    <string name="numberField">"Nummernfeld"</string>
    <string name="numberFieldText">"In diesem Bereich kannst du durch Klicken auf Zahlen diese schrittweise zum aktuellen Ergebnis im Ergebnisbereich hinzufügen. Dies ermöglicht eine einfache Zusammenstellung deiner gewünschten Zahlenkombination und zeigt dir transparent, wie sich das Ergebnis mit jeder Auswahl ändert."</string>
    <string name="removeBack">"Entfernen / Zurück"</string>
    <string name="removeBackText">"Für eine präzise Bearbeitung stehen dir verschiedene Löschfunktionen zur Verfügung: \'⌫\' entfernt die zuletzt hinzugefügte Zahl oder das zuletzt eingegebene Zeichen aus dem Ergebnisbereich, \'CE\' löscht den gesamten Ergebnisbereich und \'C\' leert sowohl den Ergebnis- als auch den Berechnungsbereich."</string>
    <string name="comma">"Komma"</string>
    <string name="commaText">"Durch das Betätigen des \'Komma-Knopfes\' hast du die Möglichkeit, ein Komma zum Ergebnisbereich hinzuzufügen. Es ist dabei zu beachten, dass, falls bereits ein Komma vorhanden ist, kein weiteres hinzugefügt wird. Diese Funktion ermöglicht eine präzise Eingabe von Dezimalstellen."</string>
    <string name="negate">"Negieren"</string>
    <string name="convertNull">0,00</string>
    <string name="convertBit">Bit (Bit)</string>
    <string name="convertByte">Byte (Byte)</string>
    <string name="convertKilobit">Kilobit (kbit)</string>
    <string name="convertKilobyte">Kilobyte (kB)</string>
    <string name="convertMegabit">Megabit (Mbit)</string>
    <string name="convertMegabyte">Megabyte (MB)</string>
    <string name="convertGigabit">Gigabit (Gbit)</string>
    <string name="convertGigabyte">Gigabyte (GB)</string>
    <string name="convertTerabit">Terabit (Tbit)</string>
    <string name="convertTerabyte">Terabyte (TB)</string>
    <string name="convertPetabit">Petabit (Pbit)</string>
    <string name="convertPetabyte">Petabyte (PB)</string>
    <string name="historyConfirmTitle">Bist du dir sicher?</string>
    <string name="historyConfirmDeleteText">Endgültig löschen</string>
    <string name="historyConfirmCancelText">Abbrechen</string>
</resources>