<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="22dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/textview_border_thick"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/historyConfirmTitle"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorBTNForegroundAccent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deleteConfirmButton"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:background="@drawable/textview_border"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/historyConfirmDeleteText"
                android:layout_marginEnd="2.5dp"
                android:textColor="@color/colorBTNForegroundAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cancelConfirmButton"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:background="@drawable/textview_border"
                android:gravity="center_horizontal|center_vertical"
                android:layout_marginStart="2.5dp"
                android:text="@string/historyConfirmCancelText"
                android:textColor="@color/colorBTNForegroundAccent"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
