<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="22dp"
    android:id="@+id/patchnotes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/patchnotesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border_thick"
            android:orientation="vertical"
            android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/releasenotes_title"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:autoSizeMaxTextSize="@dimen/maxButtonSize"
                        android:autoSizeStepGranularity="1sp"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/appVersion"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorBTNForegroundAccent"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/releasenotes_date"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:autoSizeMaxTextSize="@dimen/maxButtonSize"
                        android:autoSizeStepGranularity="1sp"
                        android:autoSizeTextType="uniform"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/releaseDate"
                        android:textColor="@color/colorBTNForegroundAccent"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/releasenotes_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoSizeMaxTextSize="@dimen/maxButtonSize"
                        android:autoSizeStepGranularity="1sp"
                        android:autoSizeTextType="uniform"
                        android:text="@string/releaseNotesText"
                        android:paddingHorizontal="15dp"
                        android:paddingTop="15dp"
                        android:textColor="@color/colorBTNForegroundAccent" />
                </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/understoodButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="@dimen/maxButtonSize"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:background="@drawable/textview_border"
                    android:gravity="center"
                    android:text="@string/understood"
                    android:textColor="@color/colorBTNForegroundAccent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>
